--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,6 @@
   "version": 2,
   "cleanUrls": true,
   "trailingSlash": true,
-  "redirects": [
-    { "source": "/speed-dating", "destination": "https://speeddating01.vercel.app/", "permanent": false },
-    { "source": "/speed-dating/(.*)", "destination": "https://speeddating01.vercel.app/$1", "permanent": false }
-  ]
+  "redirects": []
 }
 
