chore: redirect /speed-dating to external site and update nav links

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "version": 2,
   "cleanUrls": true,
   "trailingSlash": true,
-  "redirects": []
+  "redirects": [
+    { "source": "/speed-dating", "destination": "https://speeddating01.vercel.app/", "permanent": false },
+    { "source": "/speed-dating/(.*)", "destination": "https://speeddating01.vercel.app/$1", "permanent": false }
+  ]
 }
 
