--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "check:site": "node scripts/check-site.mjs",
     "build:css": "tailwindcss -c tailwind.config.js -i styles/main.css -o assets/main.min.css --minify",
-    "build:js": "terser -c -m -o assets/main.min.js -- assets/main.js"
+    "build:js": "terser -c -m -o assets/main.min.js -- assets/main.js",
+    "dev": "serve ."
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "description": "",
   "devDependencies": {
     "playwright": "^1.56.1",
+    "serve": "^14.2.5",
     "tailwindcss": "^3.4.13",
     "terser": "^5.44.0"
   }
