Fix Vercel routing: specific rewrites for /parents and disable trailing slash enforcement

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
   "cleanUrls": true,
-  "trailingSlash": true,
+  "trailingSlash": false,
+  "rewrites": [
+    { "source": "/parents", "destination": "/parents/index.html" },
+    { "source": "/parents/", "destination": "/parents/index.html" }
+  ],
   "redirects": [],
   "headers": [
     {
