Fix Vercel deployment: use dist folder and explicit build config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:css": "tailwindcss -c tailwind.config.js -i styles/main.css -o assets/main.min.css --minify",
     "build:js": "terser -c -m -o assets/main.min.js -- assets/main.js",
     "build:parents": "cd apps/parents-lp && npm install && npm run build && node -e \"const fs=require('fs'); const path=require('path'); const src='dist'; const dest='../../parents'; fs.rmSync(dest, {recursive:true, force:true}); fs.mkdirSync(dest, {recursive:true}); fs.cpSync(src, dest, {recursive:true});\"",
-    "build": "npm run build:css && npm run build:js && npm run build:parents",
+    "build": "npm run build:css && npm run build:js && npm run build:parents && node -e \"const fs=require('fs'); const path=require('path'); const dist='dist'; fs.rmSync(dist, {recursive:true, force:true}); fs.mkdirSync(dist, {recursive:true}); ['index.html', 'assets', 'parents', 'speed-dating', 'favicon.ico', 'robots.txt', 'sitemap.xml', 'vercel.json'].forEach(f => { if(fs.existsSync(f)) { fs.cpSync(f, path.join(dist, f), {recursive:true}) } })\"",
     "dev": "serve ."
   },
   "repository": {
