--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,8 @@
   "version": 2,
   "cleanUrls": true,
   "trailingSlash": false,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/parents", "destination": "/parents/index.html" },
     { "source": "/parents/", "destination": "/parents/index.html" }
